force-app/main/default/objects/PWChrono_User_Feature_Access__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <label>Feature Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Leave Management</fullName>
            </value>
            <value>
                <fullName>Attendance Management</fullName>
            </value>
            <value>
                <fullName>Employee Directory</fullName>
            </value>
            <value>
                <fullName>Expense Management</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Performance Management</fullName>
            </value>
            <value>
                <fullName>Training Management</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Manager Dashboard</fullName>
            </value>
            <value>
                <fullName>Admin Settings</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Approvals</fullName>
            </value>
            <value>
                <fullName>Company Policies</fullName>
            </value>
            <value>
                <fullName>Goals</fullName>
            </value>
            <value>
                <fullName>Holidays</fullName>
            </value>
            <value>
                <fullName>My Profile</fullName>
            </value>
            <value>
                <fullName>Tax Declaration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>