force-app/main/default/objects/PWChrono_User_Feature_Access__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active Feature</label>
    <type>Checkbox</type>
</CustomField>