force-app/main/default/objects/PWChrono_User_Feature_Access__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Feature Access</relationshipLabel>
    <relationshipName>Feature_Access</relationshipName>
    <type>Lookup</type>
</CustomField>